# engine-base

./: .gitignore  .gitmodules  CMakeLists.txt
base/: CMakeLists.txt  commandline.cpp
core/: CMakeLists.txt  appinterface.cpp  commandline.cpp  commandline.h  filesystem.cpp  filesystem.h
engine/: CMakeLists.txt  engine.cpp  engine.h  engine.hpp  enginemain.cpp  eventsystem.cpp  gameeventmanager.cpp  ilayer.h  inputsystem.cpp  inputsystem.h  objectlayer.cpp  objectlayer.h  scenesystem.cpp  testeventlistener.h  tilelayer.cpp  tilelayer.h  tilemap.cpp  tilemap.h
game/: CMakeLists.txt  baseanimated.cpp  baseanimated.h  baseentity.cpp  baseentity.h  baseitem.cpp  baseitem.h  baseplayer.cpp  baseplayer.h  basetile.cpp  basetile.h  boundboxcamera.cpp  boundboxcamera.h  darkmage.cpp  darkmage.h  ent_darkmage.cpp  entitylist.cpp  entitylist.h  eventlistener.cpp  eventlistener.h  eventsystem.cpp  eventsystem.h  followcamera.cpp  followcamera.h  gameclient.cpp  gameclient.h  gameviewport.cpp  gameviewport.h  staticcamera.cpp  staticcamera.h
launcher/: CMakeLists.txt  main.cpp
public/: common.cpp  common.h  gamemath.h  subsystem.cpp  subsystem.h  subsystems.cpp  subsystems.h
public/base/: base.h  icommandline.h
public/core/: appinterface.h  icommandline.h  ifilesystem.h  module.h
public/engine/: engine.h  iengine.h  ievent.h  ieventlistener.h  ieventsystem.h  igameevent.h  igameeventlistener.h  igameeventmanager.h  iinputsystem.h  iscenesystem.h  itilemap.h  scene2d.cpp  scene2d.h
public/game/: ibaseentity.h  icamera.h  ientitylist.h  ieventlistener.h  ieventsystem.h  igameclient.h  irenderable.h  iviewport.h
public/render/: igraphics.h  isprite.h  ispritesystem.h  itexture.h  itexturesystem.h  itileset.h  module.h  render.h  renderview.h
public/subsystem/: iappsystem.h  iappsystemgroup.h  module.h
render/: CMakeLists.txt  debugoverlay.cpp  debugoverlay.h  graphics.cpp  graphicsapi.cpp  graphicsapi.h  sprite.cpp  sprite.h  spritesystem.cpp  spritesystem.h  texture.cpp  texture.h  texturesystem.cpp  texturesystem.h  tileset.cpp  tileset.h
subsystem/: CMakeLists.txt  appsystemgroup.cpp
